overlays/gateway-api/grpcroute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-grpc-route
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "20"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    link.argocd.argoproj.io/external-link: grpc://argocd.${CLUSTER_FQDN}
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway
  hostnames:
    - "argocd.${CLUSTER_FQDN}"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
      matches:
        - headers:
            - name: Content-Type
              type: RegularExpression
              value: "^application/grpc.*$"
